test/features/errors/semantic/e1077_wrong_intrinsic_signature.spl
# E1077: Wrong Intrinsic Signature

Feature: E1077 - Intrinsic Has Wrong Signature
  As a Simple compiler
  I want to detect when intrinsics have wrong signatures
  So that intrinsics match their expected signatures

  Background:
    Given I have the Simple compiler

  Scenario: Intrinsic with wrong signature
    When I compile:
      '''
      #[intrinsic]
      fn size_of(x: i32) -> usize  # Error: should be <T>() -> usize
      '''
    Then I should see error E1077 at line 2
    And the error message should be "intrinsic `{intrinsic}` has wrong signature"
    And the label should indicate "wrong signature"
    And the help should suggest "intrinsics must match their expected signatures exactly"

  Scenario: Valid intrinsic signature
    When I compile:
      '''
      #[intrinsic]
      fn transmute<T, U>(x: T) -> U  # OK: correct signature
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      #[intrinsic]
      fn size_of(x: i32) -> usize
      '''
    Then I should see error E1077
    And the error message should contain "잘못된 내장 함수 시그니처"
